--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,8 @@
         <div class="row">
             <div class=" col-md-8 col-md-10 mx-auto">
                 <div class="site-heading">
-                    <h3 class=" site-heading my-4 mt-3 text-white"> Welcome to my awesome Blog </h3>
-                    <p class="text-light">We Love Django As much as you do..! &nbsp
+                    <h3 class=" site-heading my-4 mt-3 text-white"> Welcome to the Testimonial Page</h3>
+                    <p class="text-light">Embark on a Journey of Discovery &nbsp
                     </p>
                 </div>
             </div>
