--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -15,9 +15,8 @@
     <div class="card my-4">
             <h5 class="card-header">About Us</h5>
         <div class="card-body">
-            <p class="card-text"> This awesome blog is made on the top of our Favourite full stack Framework 'Django', follow up the tutorial to learn how we made it..!</p>
-            <a href="https://djangocentral.com/building-a-blog-application-with-django"
-               class="btn btn-danger">Know more!</a>
+            <p class="card-text">Welcome the the Embarr Equestrian Testimonial Page</p>
+        
         </div>
     </div>
     </div>
