--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                             <a class="nav-link text-black font-weight-bold" href="#">Register</a>
                         </li>
                         <li class="nav-item text-black">
-                            <a class="nav-link text-black font-weight-bold" href="#">Contact</a>
+                            <a class="nav-link text-black font-weight-bold" href="#">Submit Testimonial</a>
                         </li>
                     </ul>
                 </div>
