--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} {% block content %}
+{% load crispy_forms_tags %}
 
 <div class="container">
   <div class="row">
@@ -9,7 +10,6 @@
         <p class="card-text ">{{ post.content | safe }}</p>
       </div>
     </div>
-    {% block sidebar %} {% include 'sidebar.html' %} {% endblock sidebar %}
 
     <div class="col-md-8 card mb-4  mt-3 ">
       <div class="card-body">
@@ -38,7 +38,7 @@
         {% else %}
         <h3>Leave a comment</h3>
         <form method="post" style="margin-top: 1.3em;">
-          {{ comment_form.as_p }}
+          {{ comment_form | crispy }}
           {% csrf_token %}
           <button type="submit" class="btn btn-primary  btn-lg">Submit</button>
         </form>
