--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,25 +1,18 @@
-{% load crispy_forms_tags %}
-    {% block sidebar %}
-
-      
-    <!-- Sidebar Widgets Column -->
-    <div class="col-md-4 float-right ">
-    <div class="card my-4">
-            <h5 class="card-header">Submit a Review</h5>
-            <div class="card-body">
-                <p class="card-text"> 
-                    
-        <p>Posting as: {{ user.name }}</p>
-        
-          <h3>Leave a Review</h3>
-          
-        
+<!-- Sidebar Widgets Column -->
+<div class="col-md-4 float-right ">
+  <div class="card my-4">
+          <h5 class="card-header">About Us</h5>
+      <div class="card-body">
+          <p class="card-text"> Embarr Equestrian</p>
+          <a href="#"
+             class="btn btn-danger">Know more!</a>
       </div>
-    </div>
   </div>
-</div>
+  </div>
+  
+
 
 
                
     
-    {% endblock sidebar %}
+    
