--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -6,7 +6,7 @@
     <div class="col-md-8 card mb-4  mt-3 left  top">
       <div class="card-body">
         <h1>{% block title %} {{ post.title }} {% endblock title %}</h1>
-        <p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>
+        <!--<p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>-->
         <p class="card-text ">{{ post.content | safe }}</p>
       </div>
     </div>
@@ -19,7 +19,7 @@
         {% for comment in comments %}
         <div class="comments" style="padding: 10px;">
           <p class="font-weight-bold">
-            {{ comment.name }}
+            {{ comment.name }} |
             <span class=" text-muted font-weight-normal">
               {{ comment.created_on }}
             </span>
