--- a/templates/base.html
+++ b/templates/base.html
@@ -29,9 +29,18 @@
                         <li class="nav-item text-black">
                             <a class="nav-link text-black font-weight-bold" href="{% url 'home' %}">Home</a>
                         </li>
+                        {% if user.is_authenticated %}
+                        <li class="nav-item text-black">
+                            <a class="nav-link text-black font-weight-bold" href="{% url 'account_logout' %}">Logout</a>
+                        </li>
+                        {% else %}
                         <li class="nav-item text-black">
                             <a class="nav-link text-black font-weight-bold" href="#">Register</a>
                         </li>
+                        <li class="nav-item text-black">
+                            <a class="nav-link text-black font-weight-bold" href="{% url 'account_login' %}">Login</a>
+                        </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
