--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -37,12 +37,15 @@
           Your Review is awaiting moderation
         </div>
         {% else %}
+        {% if user.is_authenticated %}
         <h3>Leave a Review</h3>
+        <p>Posting as: {{ user.username }}</p>
         <form method="post" style="margin-top: 1.3em;">
           {{ comment_form | crispy }}
           {% csrf_token %}
           <button type="submit" class="btn btn-primary  btn-lg">Submit</button>
         </form>
+        {% endif %}
         {% endif %}
       </div>
     </div>
