--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
                         </li>
                         {% else %}
                         <li class="nav-item text-black">
-                            <a class="nav-link text-black font-weight-bold" href="#">Register</a>
+                            <a class="nav-link text-black font-weight-bold" href="{% url 'account_signup' %}">Register</a>
                         </li>
                         <li class="nav-item text-black">
                             <a class="nav-link text-black font-weight-bold" href="{% url 'account_login' %}">Login</a>
