--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,12 +24,12 @@ image-container {
 
 .btn-danger {
     color: #fff;
-    background-color: #f00000;
+    background-color: #0d6efd;
     border-color: #dc281e;
     }
 
 .masthead {
-    background: #3398E1;
+    background-color: #0d6efd;
     height: auto;
     padding-bottom: 15px;
     box-shadow: 0 16px 48px #E3E7EB;
