--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,11 @@
         {% endblock content %}
         <!-- Footer -->
         <footer class="py-3 bg-grey">
-                <p class="m-0 text-center text-grey">Follow us: 
+            <p class="m-0 text-center text-grey">Follow us: 
+                <i class="fab fa-facebook-square ms-3"></i>
+                <i class="fab fa-twitter-square ms-3"></i>
+                <i class="fab fa-instagram-square ms-3"></i>
+                <i class="fab fa-youtube-square ms-3"></i></p>
                     
             </footer>
        
