--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
         <div class="row">
             <div class=" col-md-8 col-md-12 mx-auto">
                 <div class="site-heading">
-                    <h3 class=" site-heading my-4 mt-3 text-white"> Welcome to the Testimonial Page - Please log in to submit a review of our services</h3>
-                    <p class="text-light">Embark on a Journey of Discovery &nbsp
+                    <h3 class=" site-heading my-4 mt-3 text-grey"> Welcome to the Testimonial Page - Please log in to submit a review of our services</h3>
+                    <p class="text-grey">Embark on a Journey of Discovery &nbsp
                     </p>
                     </div>
                     
