updated css in base html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
-{% block content %}
+{% block content %} 
 
-<header class="masthead">
+<!--<header class="masthead">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
@@ -16,7 +16,7 @@
             </div>
         </div>
     </div>
-</header>
+</header> -->
 <div class="container">
     <div class="row">
         <!-- Blog Entries Column -->
