--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
         </script>
-        
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
 
     <body>
@@ -51,6 +51,22 @@
                 </div>
             </div>
         </nav>
+        <header class="masthead">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row">
+                    <div class=" col-md-8 col-md-12 mx-auto">
+                        <div class="site-heading">
+                            <h3 class=" site-heading my-4 mt-3 text-grey"> Welcome to the Testimonial Page - Please log in to submit a review of our services</h3>
+                            <p class="text-grey">Embark on a Journey of Discovery &nbsp
+                            </p>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
         {% block content %}
         <!-- Content Goes here -->
         {% endblock content %}
