rolled back to original model

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
 body {
     font-family: "Roboto", sans-serif;
     font-size: 18px;
-    background-color: #fdfdfd;
+    background-color: white;
     }
 
 .head_text {
@@ -13,7 +13,7 @@ body {
     box-shadow: 0 16px 48px #E3E7EB;
     }
 
-image-container {
+.image-container {
     position: relative;
 }
 
@@ -24,18 +24,56 @@ image-container {
 
 .btn-danger {
     color: #fff;
-    background-color: #0d6efd;
+    background-color: blue;
     border-color: #dc281e;
     }
 
-.masthead {
-    background-color: #0d6efd;
+/*.masthead {
+    color: #445261;
     height: auto;
     padding-bottom: 15px;
     box-shadow: 0 16px 48px #E3E7EB;
      padding-top: 10px;
-    }
+    }*/
 
+header {
+    background: #445261;
+} 
+
+.masthead {
+        margin-top: 20px;
+        overflow: hidden;
+        position: relative;
+        display: inline-block;
+        height: 33vh;
+        width: 100%;
+        background: #445261;
+    }
+    
+/*.masthead-text {
+        background-color: #445261;
+        color: white;
+        position: relative;
+    }
+    
+.masthead-image {
+        position: relative;
+        overflow: hidden;
+    }
+    
+.masthead-image {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 90%;
+        height: 100%;
+        width: 150%;
+        background: #445261;
+        -webkit-transform: skew(15deg);
+        -moz-transform: skew(15deg);
+        transform: skew(15deg);
+        z-index: 100;
+    }*/
 
 
     
