--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,24 @@
+
 {% extends "base.html" %}
 {% block content %} 
 
-<!--<header class="masthead">
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class=" col-md-8 col-md-12 mx-auto">
-                <div class="site-heading">
-                    <h3 class=" site-heading my-4 mt-3 text-grey"> Welcome to the Testimonial Page - Please log in to submit a review of our services</h3>
-                    <p class="text-grey">Embark on a Journey of Discovery &nbsp
-                    </p>
-                    </div>
+<header> 
+    <header class="masthead">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class=" col-md-8 col-md-12 mx-auto">
+                    <div class="site-heading">
+                             <h3 class=" site-heading my-4 mt-3 text-grey"> Welcome to the Testimonial Page - Please log in to submit a review of our services</h3>
+                            <p class="text-grey">Embark on a Journey of Discovery &nbsp</p>
+                        </div>
                     
                 </div>
             </div>
         </div>
     </div>
-</header> -->
+</header>
+
 <div class="container">
     <div class="row">
         <!-- Blog Entries Column -->
