--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -5,7 +5,7 @@
       <div class="card-body">
           <p class="card-text"> Embarr Equestrian</p>
           <a href="#"
-             class="btn btn-danger">Know more!</a>
+             class="btn btn-primary">Know more!</a>
       </div>
   </div>
   </div>
