--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,9 @@
                             <a class="nav-link active text-black font-weight-bold" href="{% url 'home' %}">Home</a>
                         </li>
                         {% if user.is_authenticated %}
+                        <!--<li class="nav-item text-black">
+                            <a class="text-black font-weight-bold" href="{% url 'user' %}">{{user.username|title}}</a>
+                            </li>-->
                         <li class="nav-item text-black">
                             <a class="nav-link text-black font-weight-bold" href="{% url 'account_logout' %}">Logout</a>
                         </li>
@@ -43,6 +46,7 @@
                         <li class="nav-item text-black">
                             <a class="nav-link text-black font-weight-bold" href="{% url 'account_login' %}">Login</a>
                         </li>
+                        
                         {% endif %}
                     </ul>
                 </div>
