--- a/templates/base.html
+++ b/templates/base.html
@@ -19,10 +19,13 @@
     </head>
 
     <body>
+        <!-- SEARCH BOX SECTION -->
+ 
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{% url 'home' %}">Embarr Equestrian Testimonials</a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
