--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,13 +5,12 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<!-- LOGOUT SECTION -->
-<section class="logs-pages">
-<div class="container box-shadow">
+<div class="container">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
       <h3>{% trans "Sign Up" %}</h3>
-      <p>{% blocktrans %}Welcome back to the Tasty Blog. Do you already have an account? Then please <a class="link"
+
+      <p>{% blocktrans %}Welcome back to Embarr Equestrian. Do you already have an account? Then please <a class="link"
           href="{{ login_url }}">sign in</a> instead.{% endblocktrans %}</p>
     </div>
   </div>
@@ -28,6 +27,5 @@
     </div>
   </div>
 </div>
-</section>
-<!-- LOGOUT SECTION -->
+
 {% endblock %}
