--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,13 @@
             <div class="row">
                 <div class="col-md-8 col-md-16 mx-auto">
                     <div class="site-heading">
-                             <h3 class="site-heading my-8 mt-3 text-grey align-items-center"> Welcome to Embarr Equestrian Services</h3>
-                            
+                             <h3 class="site-heading my-8 mt-3 text-grey align-items-center"> Welcome to Embarr Equestrian Services | Please leave a Review</h3>
+                            <hr>
                             <div class="container h-100">
                                 <div class="row align-items-center">
                                     <form action="{% url 'search' %}" method="POST" class="d-flex mx-auto col-md-8">
                                         {% csrf_token %}
-                                        <input class="form-control me-2" type="search" name="searched" placeholder="Search" aria-label="Search">
+                                        <input class="form-control me-2" type="search" name="searched" placeholder="Search for a Service e.g Livery" aria-label="Search">
                                         <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
                                     </form>
                                 </div>
