updated posts in admin with some text

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -14,7 +14,7 @@
             the name is inspired by the mythical horse named "Embarr" a Gaelic word that means "imagination." <br>
             In mythology, this is the name of the heroine Niamh's magical 
             horse that could cross the sea and land without touching the water or the ground.</p>
-          <p><a href="#"
+          <p><a href="https://chellej80.github.io/Embarr-Equestrian/" target="_blank"
              class="btn btn-primary">Know more!</a></p>
 
              
