--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -30,7 +30,7 @@
           
           <p>{{ user.username }}</p>
           
-          {% if user.is_authenticated and user.username == comment.name or user.is_superuser %}
+          {% if user.is_authenticated and user.username == user.username %}
                    <a href="{% url 'edit_comment' comment.id %}" aria-label="Go to the Edit Comments Page">Edit <i class="fa-solid fa-comment-pen"></i></a>
                     <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#delete-comment"><i class="fas fa-trash"></i></button>
                     <!-- Delete comment bootstrap modal-->
