updated user profile form with bio field and updated the form also

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -48,7 +48,8 @@
             {{ comment.created_on }}
           </span>
         </p>
-          
+        {{ comment.rating | linebreaks }}
+
         {{ comment.body | linebreaks }}
           
         <p>{{ user.username }}</p>
