--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container shadow-lg p-3 mb-5 bg-body rounded">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
       <h3>{% trans "Sign In" %}</h3>
@@ -19,14 +19,16 @@
   </div>
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
+      <div class="card-body">
       <form class="login" method="POST" action="{% url 'account_login' %}">
         {% csrf_token %}
         {{ form.as_p }}
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button class="btn btn-signup right" type="submit">{% trans "Sign In" %}</button>
+        <button class="btn btn-primary  btn-lg" type="submit">{% trans "Sign In" %}</button>
       </form>
+      </div>
     </div>
   </div>
 </div>
