--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,11 +5,11 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container shadow-lg p-3 mb-5 bg-body rounded">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
       <h3>{% trans "Sign Out" %}</h3>
-
+      <br>
       <p>{% trans 'Are you sure you want to sign out?' %}</p>
     </div>
   </div>
@@ -21,7 +21,7 @@
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button class="btn btn-signup right" type="submit">{% trans 'Sign Out' %}</button>
+        <button class="btn btn-primary  btn-lg" type="submit">{% trans 'Sign Out' %}</button>
       </form>
     </div>
   </div>
