--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -16,6 +16,13 @@
     {% if user.is_authenticated %}
     <div class="col-md-8 card mb-4  mt-3 ">
       <div class="card-body">
+
+        {% if new_comment %}
+        <div class="alert alert-success" role="alert">
+          Your Review is awaiting moderation
+        </div>
+
+        {% else %}
        
         <h3>Leave a Review</h3>
         <p>Posting as: {{ user.username }}</p>
@@ -25,10 +32,7 @@
           <br>
           <button type="submit" class="btn btn-primary  btn-lg">Submit</button>
         </form>
-        {% if new_comment %}
-        <div class="alert alert-success" role="alert">
-          Your Review is awaiting moderation
-        </div>
+        
         {% endif %}
         {% endif %}
         
