--- a/templates/post_edit.html
+++ b/templates/post_edit.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="container">
-    <div class="row mt-5">
-        <div class="col-md-3 col-sm-6">
+<div class="container shadow-lg p-3 mb-5 bg-body rounded">
+    <div class="row">
+      <div class="col-md-8 mt-3 offset-md-2">
             <a href="{% url 'post_detail' object.pk %}" class="btn btn-light">Back to Feed</a>
         </div>
     </div>
-    <div class="row justify-content-center mt-5">
+    <div class="row col-md-8 mt-3 offset-md-2">
         <div class="col-md-5 col-sm-12">
             <h5>Update Your Post</h5>
         </div>
