installed summernote for admin post use and updated requirements

--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -6,8 +6,8 @@
     <div class="container shadow-lg p-3 mb-5 bg-body rounded">
         <div class="row">
             <div class="col-md-8 mt-3 offset-md-2">
-                <h1 class="title">Edit Comment</h1>
-                <p>Edit comment as: {{ user.username | slice:":10" }}</p>
+                <h1 class="title">Edit Review</h1>
+                <p>Edit review as: {{ user.username | slice:":10" }}</p>
                 
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
@@ -17,6 +17,5 @@
             </div>
         </div>
     </div>
-    <!-- END UPDATE COMMENT SECTION  -->
-
+    
     {% endblock content %}
