--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -6,7 +6,6 @@
     <div class="col-md-8 card mb-4  mt-3">
       <div class="card-body">
         <h1>{% block title %} {{ post.title }} {% endblock title %}</h1>
-        <!--<p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>-->
         <p class="card-text ">{{ post.content | safe }}</p>
       </div>
     </div>
@@ -17,7 +16,7 @@
     <div class="col-md-8 card mb-4  mt-3 ">
       <div class="card-body">
 
-        {% if new_comment %}
+        {% if new_review %}
         <div class="alert alert-success" role="alert">
           Your Review is awaiting moderation
         </div>
@@ -27,7 +26,7 @@
         <h3>Leave a Review</h3>
         <p>Posting as: {{ user.username }}</p>
         <form method="post" style="margin-top: 1.3em;">
-          {{ comment_form | crispy }}
+          {{ review_form | crispy }}
           {% csrf_token %}
           <br>
           <button type="submit" class="btn btn-primary  btn-lg">Submit</button>
@@ -45,29 +44,29 @@
     <div class = "row">
     <div class="col-md-8 card mb-4  mt-3">
       <div class="card-body">
-        <!-- comments -->
-      <h2>{{ comments.count }} Reviews</h2>
+        <!-- Reviews -->
+      <h2>{{ reviews.count }} Reviews</h2>
 
-      {% for comment in comments %}
+      {% for review in reviews %}
         
-      <div class="comments" style="padding: 10px;">
+      <div class="reviews" style="padding: 10px;">
         <p class="font-weight-bold">
-          {{ comment.name }} |
+          {{ review.name }} |
           <span class=" text-muted font-weight-normal">
-            {{ comment.created_on }}
+            {{ review.created_on }}
           </span>
         </p>
-        {{ comment.rating | linebreaks }}
+        {{ review.rating | linebreaks }}
 
-        {{ comment.body | linebreaks }}
+        {{ review.body | linebreaks }}
           
         
           
-        {% if user.is_authenticated and user.username == comment.name %}
-        <a href="{% url 'edit_comment' comment.id %}" aria-label="Go to the Edit Comments Page">Edit <i class="fa-solid fa-comment-pen"></i></a>
-          <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#delete-comment"><i class="fas fa-trash"></i></button>
+        {% if user.is_authenticated and user.username == review.name %}
+        <a href="{% url 'edit_review' review.id %}" aria-label="Go to the Edit Comments Page">Edit <i class="fa-solid fa-comment-pen"></i></a>
+          <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#delete-review"><i class="fas fa-trash"></i></button>
           <!--Delete comment bootstrap modal-->
-          <div class="modal fade" id="delete-comment"
+          <div class="modal fade" id="delete-review"
           tabindex="-1" aria-hidden="true">
               <div class="modal-dialog">
                   <div class="modal-content">
@@ -75,12 +74,12 @@
                           <h5 class="modal-title"  id="staticBackdropLabel">Delete Comment</h5>
                       </div>
                       <div class="modal-body">
-                          Are you sure you want to delete your comment?
+                          Are you sure you want to delete your review?
                       </div>
                       <div class="modal-footer">
                           <button type="button" class="btn btn-secondary"
                               data-bs-dismiss="modal">Close</button>
-                          <a href="{% url 'delete_comment' comment.id %}" class="btn btn-danger" aria-label="Delete Comment">Delete</a>
+                          <a href="{% url 'delete_review' review.id %}" class="btn btn-danger" aria-label="Delete Review">Delete</a>
                       </div>
                   </div>
               </div>
