--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,18 +5,19 @@ body {
     background-color:#fff;
     }
 
-.row {
-    margin-top: 15px;
-}
-
 .masthead {
         margin-top: 20px;
         overflow: hidden;
         position: relative;
         display: inline-block;
-        height: 25vh;
+        height: 30vh;
         width: 100%;
         background:#698bb0;
+    }
+
+    .row {
+        margin-top: 15px;
+        margin-bottom: 15px;
     }
 
 header {
