--- a/templates/index.html
+++ b/templates/index.html
@@ -1,70 +1,46 @@
-
-{% extends "base.html" %}
-{% block content %} 
-
-<header> 
+{% extends "base.html" %} {% block content %} 
     <header class="masthead">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-md-16 mx-auto">
-                    <div class="site-heading">
-                             <h3 class="site-heading my-8 mt-3 text-grey align-items-center"> Welcome to Embarr Equestrian Services | Please leave a Review</h3>
-                             <hr>
-                             <div class="container h-100">
-                                <div class="row align-items-center">
-                                    <form action="{% url 'search' %}" method="POST" class="d-flex mx-auto col-md-8">
-                                        {% csrf_token %}
-                                        <input class="form-control me-2" type="search" name="searched" placeholder="Search for a Service e.g Livery" aria-label="Search">
-                                        <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
-                                    </form>
-                                </div>
-                            </div>
-                    </div>
+      <div class="overlay"></div>
+      <div class="container h-100">
+        <div class="row">
+          <div class="col-md-8 col-md-16 mx-auto">
+            <div class="site-heading">
+              <h3 class="site-heading my-8 mt-3 text-grey align-items-center"> Welcome to Embarr Equestrian Services | Please leave a Review</h3>
+              <hr>
+              <div class="container h-100">
+                <div class="row align-items-center">
+                  <form action="{% url 'search' %}" method="POST" class="d-flex mx-auto col-md-8"> {% csrf_token %} <input class="form-control me-2" type="search" name="searched" placeholder="Search for a Service e.g Livery" aria-label="Search">
+                    <button class="btn btn-primary" type="submit">
+                      <i class="fas fa-search"></i>
+                    </button>
+                  </form>
                 </div>
+              </div>
             </div>
+          </div>
         </div>
-    </div>
-</header>
-
-<div class="container">
-    <div class="row">
+      </div> 
+    </header>
+    <div class="container">
+      <div class="row">
         <!-- Post Entries Column -->
-        <div class="col-md-8 mt-3 left">
-            {% for post in post_list %}
-            <div class="card mb-4">
-                <div class="card-body">
-                    <div class="image-container">
-                        <img class="card-img-top"
-                            src="https://res.cloudinary.com/chellej80/image/upload/v1657053329/horse_field_se4no3.jpg">
-                            <div>
-                            <p>
-                                <h2 class="card-title">{{ post.title }}</h2></p>
-                        </div>
-                        <a href="{% url 'post_detail' post.slug  %}" class="btn btn-primary">Click here to Review &rarr;</a>
-                    </div>
-                    
+        <div class="col-md-8 mt-3 left"> {% for post in post_list %} <div class="card mb-4">
+            <div class="card-body">
+              <div class="image-container">
+                <img class="card-img-top" src="https://res.cloudinary.com/chellej80/image/upload/v1657053329/horse_field_se4no3.jpg" alt = "Horse Head in Field">
+                <div>
+                  <h2 class="card-title">{{ post.title }}</h2>
                 </div>
+                <a href="{% url 'post_detail' post.slug  %}" class="btn btn-primary">Click here to Review &rarr;</a>
+              </div>
             </div>
-            {% endfor %}
-        </div>
-        {% block sidebar %} {% include 'sidebar.html' %} {% endblock sidebar %}
-    </div>
-</div>
-{% if is_paginated %}
-  <nav aria-label="Page navigation container"></nav>
-  <ul class="pagination justify-content-center">
-    {% if page_obj.has_previous %}
-    <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
-    {% endif %}
-    {% if page_obj.has_next %}
-    <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
-
-    {% endif %}
-  </ul>
-  </nav>
-</div>
-{% endif %}
-
-{%endblock%}
-
+          </div> {% endfor %} </div> {% block sidebar %} {% include 'sidebar.html' %} {% endblock sidebar %}
+      </div>
+    </div> {% if is_paginated %} <nav aria-label="Page navigation container">
+    <ul class="pagination justify-content-center"> {% if page_obj.has_previous %} <li>
+        <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a>
+      </li> {% endif %} {% if page_obj.has_next %} <li>
+        <a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a>
+      </li> {% endif %} </ul>
+    </nav>
+    {% endif %} {%endblock%}
