--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,45 +1,18 @@
-{% extends 'base.html' %}
-{% load static %}
-{% load crispy_forms_tags %}
-
-{% block content %}
-
-<!-- PROFILE SECTION -->
+{% extends 'base.html' %} {% load static %} {% load crispy_forms_tags %} {% block content %} 
 <section id="profile">
-   <!--<h2 class="title">Profile Info</h2>-->
     <div class="container">
-        <div class="row">
-        
-            <div class="user-info-box col-md-3 shadow-lg p-3 mb-5 bg-body rounded">
-                
-                <h3>Username: {{ user.username | slice:":15" }}</h3>
-                <h3>Email: {{ user.email }}</h3>
-                
-                {% if user.is_superuser %}
-                <h3>Status: Superuser</h3>
-                {% else %}
-                <h3>Status: User</h3>
-                {% endif %}
-            </div>
+      <div class="row">
+        <div class="user-info-box col-md-3 shadow-lg p-3 mb-5 bg-body rounded">
+          <h3>Username: {{ user.username | slice:":15" }}</h3>
+          <h3>Email: {{ user.email }}</h3> {% if user.is_superuser %} <h3>Status: Superuser</h3> {% else %} <h3>Status: User</h3> {% endif %}
         </div>
-
-    <form class="update-profile form-control shadow-lg p-3 mb-5 bg-body rounded" id="signup_form" method="post"
-        action="{% url 'profile' %}" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ user_form | crispy }}
-        {{ profile_form | crispy }}
-        {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-        {% endif %}
-        <br>
+      </div>
+      
+      <form class="update-profile form-control shadow-lg p-3 mb-5 bg-body rounded" id="signup_form" method="post" action="{% url 'profile' %}" enctype="multipart/form-data"> {% csrf_token %} {{ user_form | crispy }}
+        {{ profile_form | crispy }} {% if redirect_field_value %} <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" /> {% endif %} <br>
         <button class="btn btn-primary  btn-md" type="submit">Update</button>
-    </form>
-
-    {% if user.is_superuser %}
-    <a class="btn btn-secondary mt-5" href="/admin" target="_blank" aria-label="Go to the Admin Panel">Admin Panel</a>
-    {% endif %}
-
-</section>
-<!-- END OF PROFILE SECTION -->
-
-{% endblock content %}
+      </form> {% if user.is_superuser %} <a class="btn btn-secondary mt-5" href="/admin" target="_blank" aria-label="Go to the Admin Panel">Admin Panel</a> {% endif %}
+    </div>
+    </section> 
+  
+  {% endblock content %}
