--- a/templates/search.html
+++ b/templates/search.html
@@ -1,53 +1,35 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
-
-<section id="searched-box">
+{% extends 'base.html' %} {% load static %} {% block content %} <section id="searched-box">
     <div class="container box-shadow">
+      <div class="row">
+        <div class="col-md-8 m-auto text-center"> {% if searched %} <h2 class="info-text">You Searched for <span class="text-success">"{{ searched }}"</span>
+          </h2>
+          <br>
+        </div>
+      </div>
+      <div class="searched-results"> {% for post in results %} <a href="{% url 'post_detail' post.slug %}" aria-label="Go to the post detail page">
+          <div class="row row-results">
+            <div class="col-md-6 p-3">
+              <h4 class="sub-title">{{ post }} </h4>
+              <p class="color-light text-center">{{ post.overview }}</p>
+            </div>
+            <!--<div class="col-md-6"><img src="{{ post.featured_image.url }}" alt="{{ result }} Image">-->
+          </div>
+        </a>
+      </div>
+      <hr> {% empty %} <div class="results-null">
         <div class="row">
-            <div class="col-md-8 m-auto text-center">
-                {% if searched %}
-                <h2 class="info-text">You Searched for <span class="text-success">"{{ searched }}"</span></h2>
-                <br>
-            </div>
+          <div class="col-md-12" style="text-align: center;">
+            <h2>We Are Sorry</h2>
+            <p>There is no search for <span class="text-success">"{{ searched }}"</span> on the website. </p>
+            <p>Please try searching again</p>
+          </div>
         </div>
-        <div class="searched-results">
-            {% for post in results %}
-            <a href="{% url 'post_detail' post.slug %}" aria-label="Go to the post detail page">
-                <div class="row row-results">
-                    <div class="col-md-6 p-3">
-                        <h4 class="sub-title">{{ post }} </h4>
-                        <p class="color-light text-center">{{ post.overview }}</p>
-                    </div>
-                    <!--<div class="col-md-6">
-                        <img src="{{ post.featured_image.url }}" alt="{{ result }} Image">-->
-                    </div>
-                </div>
-            </a>
-            <hr>
-            {% empty %}
-            <div class="results-null">
-                <div class="row">
-                    <div class="col-md-12" style="text-align: center;">
-                        <h2>We Are Sorry</h2>
-                        <p>There is no search for <span class="text-success">"{{ searched }}"</span> on the website.</p>
-                        <p>Please try searching again</p>
-                    </div>
-                </div>
-            </div>
+      </div>
+    </div> {% endfor %} {% else %} <div class="results-empty">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Please try searching again.</h2>
         </div>
-        {% endfor %}
-        {% else %}
-        <div class="results-empty">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Please try searching again.</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-    {% endif %}
-    </div>
-    </div>
-</section>
-{% endblock content %}
+      </div>
+    </div> {% endif %}
+  </section> {% endblock content %}
