--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,24 +1,15 @@
 <!-- Sidebar Widgets Column -->
 <div class="col-md-4 float-right ">
   <div class="card my-4">
-
-          <h5 class="card-header">About Us</h5>
-          
-        
-           
-          
-      <div class="card-body">
-          <p class="card-text"> Embarr Equestrian: "Horses are not just a business for us, they are our passion"</p>
-          <p>Now established as one of the most successful Livery and Equine Coaching centres in the country,
-            Embarr Equestrian in Co. Meath, Ireland is set on 120 acres of rolling parkland.<br><br>Owned by the Jordan family, 
-            the name is inspired by the mythical horse named "Embarr" a Gaelic word that means "imagination." <br>
-            In mythology, this is the name of the heroine Niamh's magical 
-            horse that could cross the sea and land without touching the water or the ground.</p>
-          <p><a href="https://chellej80.github.io/Embarr-Equestrian/" target="_blank"
-             class="btn btn-primary">Know more!</a></p>
-
-             
-        </div>
-      </div>
+    <h5 class="card-header">About Us</h5>
+    <div class="card-body">
+      <p class="card-text"> Embarr Equestrian: "Horses are not just a business for us, they are our passion"</p>
+      <p>Now established as one of the most successful Livery and Equine Coaching centres in the country, Embarr Equestrian in Co. Meath, Ireland is set on 120 acres of rolling parkland. <br>
+        <br>Owned by the Jordan family, the name is inspired by the mythical horse named "Embarr" a Gaelic word that means "imagination." <br> In mythology, this is the name of the heroine Niamh's magical horse that could cross the sea and land without touching the water or the ground.
+      </p>
+      <p>
+        <a href="https://chellej80.github.io/Embarr-Equestrian/" target="_blank" class="btn btn-primary">Know more!</a>
+      </p>
+    </div>
   </div>
-  
+</div>
