updated footer icons with external links

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,12 +54,14 @@
     </div> {% block content %}
     <!-- Content Goes here --> {% endblock content %}
     <!-- Footer -->
-    <footer class="py-3 bg-grey">
-      <p class="m-0 text-center text-grey">Follow us: <i class="fab fa-facebook-square ms-3"></i>
-        <i class="fab fa-twitter-square ms-3"></i>
-        <i class="fab fa-instagram-square ms-3"></i>
-        <i class="fab fa-youtube-square ms-3"></i>
+    <footer class="footer mt-auto py-3 dark-bg">
+      <p class="m-0 text-center text-grey">Follow us: 
+        <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Go to the facebook Embarr Equestrian page"><i class="fab fa-facebook-square ms-3" ></i></a>
+        <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Go to the Twitter Embarr Equestrian page"><i class="fab fa-twitter-square ms-3"></i></a>
+        <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Go to the instagram Embarr Equestrian Page"><i class="fab fa-twitter-square ms-3"></i></a>
+        <a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Go to the youtube Embarr Equestrian Page"><i class="fab fa-youtube-square ms-3"></i></a>
       </p>
+      
     </footer>
     <script>
       setTimeout(function() {
